<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Banana Run</string>
    <string name="title_section3">Map</string>
    <string name="title_section2">Home</string>
    <string name="title_section1">Record</string>
    <string name="menu_settings">Settings</string>
    <string name="logo_description">Start Button</string>
    <string name="logo_prefs_description">Preferences Button</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Mapa</string>

    <!-- Preferences strings from example -->
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_info">User Information</string>
    <string name="pref_user_height">Height</string>
    <string name="pref_user_heightVal">170 cm</string>
    <string name="pref_user_weight">Weight</string>
    <string name="pref_user_weightVal">60 Kg</string>
    <string name="pref_options">Other options</string>
    <string name="pref_unit_systems">Units</string>
    <string name="pref_units_summary">Metric system</string>
    <string name="pref_gps">Enable GPS</string>
    <string name="pref_gps_summary">Turn on geolocalization</string>
    <string name="logo_wback_description">Weather Background</string>
    <string name="logo_weather_description">Weather Icon</string>
    <string name="timelimit">Time limit</string>
    <string name="distancelimit">Distance limit</string>
    <string name="freerunning">Free running</string>
    <string name="limitstring">Any limits?</string>
    <string name="last_distance">----</string>
    <string name="last_time">----</string>
    <string name="last_session">Last Session:</string>
    <string name="gpsmsg">Remember: Turn GPS on!</string>
    <string name="statHeader">Sessions:</string>

    <string name="calories">Calories: </string>
    
    <string name="timer">Time: </string>
    <string name="motivation">Motivation:</string>
    <string name="lockmap">Lock map</string>
    <string name="locate">My position</string>
    <string name="switchlayer">Change layer</string>
    <string name="general_stats">General Statistics</string>
    <string name="defaultMessage">Press the \'Run\' button to start your adventure!</string>
    <string name="GPSerror">Please, enable GPS to get started!</string>
    
    <string name="sessionDate">Session Date:</string>
    <string name="averageSpeedStr">Average Speed:</string>
    <string name="averageTimeStr">Average Time:</string>
    <string name="totalDistanceStr">Total Distance:</string>
    <string name="timePerDistanceStr">Time/distance:</string>
    <string name="kilocaloriesStr">Kilocalories:</string>
	<string name="timeStat">Time</string>
	<string name="distStat">Distance</string>
	<string name="calStat">KCal</string>
	<string name="speedStat">Average Speed</string>
	<string name="toastStat">Empty Register</string>
	<string name="speedStat2">Speed</string>
	<string name="session">Session</string>
	<string name="delete">Delete?</string>
    <string name="sureDelete">Are you sure you want to delete the session?</string>
    <string name="cancel">Cancel</string>
    <string name="overview">Overview:</string>
	<string name="selectGraph">Select a graph here</string>
	<string name="limitTTS">You have reached the limit, the race is over.</string>
	<string name="servText">Click to see statistics and more!</string>
	<string name="kmLang">Kilometers</string>
    
</resources>