<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/limit_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/limitstring"
        android:textColor="@color/text_colour"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/limit_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/limit_string"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/time_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timelimit" />

        <RadioButton
            android:id="@+id/distance_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancelimit" />

        <RadioButton
            android:id="@+id/free_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/freerunning" />
    </RadioGroup>

    <NumberPicker
        android:id="@+id/limit_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/limit_string"
        android:layout_marginRight="20dp"
        android:background="@color/picker_background"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/startsessionbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/start_session_button" >
    </ImageView>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limit_group"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>