<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dp"
	android:background="@drawable/gradient"
	android:orientation="vertical">	
	
    <Button
	    android:id="@+id/btn1"
	    android:layout_width="match_parent"
	    android:layout_height="45sp"
	    android:layout_alignParentRight="true"
	    android:layout_marginTop="30dp"
	    android:background="@drawable/background_button"
	    android:text="@string/selectGraph"
	    android:textColor="@color/text_colour"
	    android:textSize="25sp"
	    android:textStyle="bold" />
    
    <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:paddingLeft="5dp"
        	android:paddingRight="5dp"
        	android:shadowColor="#000000"
        	android:shadowDx="0"
        	android:shadowDy="0"
        	android:shadowRadius="5"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:textColor="@color/text_colour"
            android:layout_below="@+id/btn1" >
            
        </TextView>
    
	            <TextView
	                android:id="@+id/sessionStatsMeanSpeedStr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/overview"
	                android:layout_marginLeft="10sp"
	                android:layout_marginTop="10sp"
	                android:text="@string/averageSpeedStr"
	                android:textStyle="bold"
	                android:textSize="20sp" />

	            <TextView
	                android:id="@+id/sessionStatsMeanSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@id/sessionStatsMeanSpeedStr"
	                android:layout_alignBaseline="@id/sessionStatsMeanSpeedStr"
	                android:textSize="20sp"
	                android:textStyle="normal" />

	   
	            <TextView
	                android:id="@+id/sessionStatsMeanTimeStr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10sp"
	                android:layout_marginTop="15sp"
	                android:layout_below="@id/sessionStatsMeanSpeedStr"
	                android:text="@string/averageTimeStr"
	                android:textStyle="bold"
	                android:textSize="20sp" />

	            <TextView
	                android:id="@+id/sessionStatsMeanTime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@id/sessionStatsMeanTimeStr"
	                android:layout_alignBaseline="@id/sessionStatsMeanTimeStr"
	                android:layout_marginRight="10sp"
	                android:textSize="20sp"
	                android:textStyle="normal" />

	            <TextView
	                android:id="@+id/sessionStatsDistanceStr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10sp"
	                android:layout_marginTop="15sp"
	                android:layout_below="@id/sessionStatsMeanTimeStr"
	                android:text="@string/totalDistanceStr"
	                android:textStyle="bold"
	                android:textSize="20sp" />

	            <TextView
	                android:id="@+id/sessionStatsDistance"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@id/sessionStatsDistanceStr"
	                android:layout_alignBaseline="@id/sessionStatsDistanceStr"
	                android:layout_marginRight="10sp"
	                android:textSize="20sp"
	                android:textStyle="normal" />

	            <TextView
	                android:id="@+id/sessionStatsTimePerDistanceStr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/sessionStatsDistanceStr"
	                android:layout_marginLeft="10sp"
	                android:layout_marginTop="15sp"
	                android:text="@string/timePerDistanceStr"
	                android:textStyle="bold"
	                android:textSize="20sp" />

	            <TextView
	                android:id="@+id/sessionStatsTimePerDistance"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@id/sessionStatsTimePerDistanceStr"
	                android:layout_alignBaseline="@id/sessionStatsTimePerDistanceStr"
	                android:layout_marginRight="10sp"
	                android:textSize="20sp"
	                android:textStyle="normal" />

	            <TextView
	                android:id="@+id/sessionStatsKilocaloriesStr"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/sessionStatsTimePerDistanceStr"
	                android:layout_marginLeft="10sp"
	                android:layout_marginTop="15sp"
	                android:text="@string/kilocaloriesStr"
	                android:textStyle="bold"
	                android:textSize="20sp" />

	            <TextView
	                android:id="@+id/sessionStatsKilocalories"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_toRightOf="@id/sessionStatsKilocaloriesStr"
	                android:layout_alignBaseline="@id/sessionStatsKilocaloriesStr"
	                android:layout_marginRight="10sp"
	                android:textSize="20sp"
	                android:textStyle="normal" />

</RelativeLayout>